--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -1,6 +1,7 @@
 @import url("//fonts.googleapis.com/css?family=Open+Sans");
 @import url("http://fonts.cdnfonts.com/css/gotham");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@700");
 
 :root {
   /* COLORS */
@@ -8,6 +9,8 @@
   --primary-color: #3dcf72;
   --secondary-color: #caffdd;
   --light-color: #f0f9ef;
+  --grey-color: rgb(211, 211, 211);
+  --alert-color: #ff6b6b;
 
   /* FONTS */
   --leading-font: "Gotham Black", "Montserrat", "Open Sans", sans-serif;
@@ -286,4 +289,61 @@ img {
   border: 0;
   background-color: transparent;
   cursor: pointer;
+}
+
+.container {
+  margin: 0 15vw;
+}
+
+.form-container {
+  background: var(--light-color);
+  margin-bottom: 3vw;
+  padding: 1.5vw;
+  border-radius: 0.5vw;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.form-text {
+  color: var(--dark-color);
+  font-size: 1.5vw;
+  text-align: left;
+}
+
+.form-text-input {
+  font-size: 1.5vw;
+  width: 100%;
+  height: 3vw;
+  background-color: var(--light-color);
+  color: var(--primary-color);
+  border: 0;
+  border-bottom: 0.1vw solid var(--grey-color);
+}
+
+.form-text-input:focus {
+  outline: 0;
+  border: 0;
+  border-bottom: 0.2vw solid var(--primary-color);
+}
+
+.form-error {
+  background-color: var(--alert-color);
+  margin: 0vw -1.5vw -2.2vw -1.5vw;
+  border-radius: 0 0 0.5vw 0.5vw;
+}
+
+.form-error-text {
+  font-size: 1vw;
+  padding: 1vw;
+}
+
+.error-input {
+  border-bottom-color: var(--alert-color);
+}
+
+.btn-submit {
+  color: var(--dark-color);
+  font-weight: bold;
+  font-size: 1.5vw;
+  width: 100%;
+  margin: 0 0 2vw 0;
 }
